[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keynet"
version = "0.2.2"
description = "Event-driven automation library for keyboard, mouse, system, and network events."
authors = [
    { name="Rudransh Joshi", email="rudransh20septmber@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "psutil",
    "pynput",
    "comtypes",
    "pycaw",
]
